# qldb-presentation

./: .gitignore  LICENSE  README.md  ledger.yaml  pyproject.toml  template.yaml
api/: requirements.txt
api/api/: app.py
src/api/: operations.py
stream/stream/: app.py  helpers.py
tests/: locustfile.py
