[tool.poetry]
name = "qldb-presentation"
version = "0.1.0"
description = "QLDB Demo Application"
authors = ["Andrew May <andrew.may@leadingedje.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.69"
pyqldb = "^3.1.0"
aws-kinesis-agg = "^1.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
